# Rozado

./: README.md  hot_reload.py  main.kv  main.py  postgre_connection.py  pyproject.toml  test.py
components/: navigation.kv  topbar.kv
screen/: home.kv  screen1.kv  screen2.kv
