[tool.poetry]
name = "rozado"
version = "0.1.0"
description = ""
authors = ["Jeff <jeffersonpereira138@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kivy = "^2.2.0"
kivymd = "^1.2.0"
pillow = "^10.4.0"
numpy = "^2.0.1"
asynckivy = "^0.6.3"
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.2"
buildozer = "^1.5.0"
cython = "^3.0.11"
pylint = "^3.3.2"
autopep8 = "^2.3.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
